update affiliation for one article

--- a/_issues/2022-3/2022-3.html
+++ b/_issues/2022-3/2022-3.html
@@ -117,7 +117,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["2022-3.log","2022-3.pdf","doi.xml","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
+  {"type":"character","attributes":{},"value":["2022-3_files/anchor-4.2.2/anchor.min.js","2022-3_files/bowser-1.9.3/bowser.min.js","2022-3_files/distill-2.2.21/template.v2.js","2022-3_files/header-attrs-2.19/header-attrs.js","2022-3_files/jquery-3.6.0/jquery-3.6.0.js","2022-3_files/jquery-3.6.0/jquery-3.6.0.min.js","2022-3_files/jquery-3.6.0/jquery-3.6.0.min.map","2022-3_files/popper-2.6.0/popper.min.js","2022-3_files/tippy-6.2.7/tippy-bundle.umd.min.js","2022-3_files/tippy-6.2.7/tippy-light-border.css","2022-3_files/tippy-6.2.7/tippy.css","2022-3_files/tippy-6.2.7/tippy.umd.min.js","2022-3_files/webcomponents-2.0.0/webcomponents.js","2022-3.log","2022-3.pdf","doi.xml","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1532,7 +1532,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <p><a href="../../news/RJ-2022-3-editorial">Editorial</a><br>Catherine Hurley 4</p>
 <h3 id="contributed-research-articles">Contributed Research Articles</h3>
 <p><a href="../../articles/RJ-2022-041">Introducing fastpos: A Fast R Implementation to Find the Critical Point of Stability for a Correlation</a><br>Johannes Titz 5</p>
-<p><a href="../../articles/RJ-2022-042">WLinfer: Statistical Inference for Weighted Lindley Distribution</a><br>Yu-Hyeong Jang, SungBum Kim, Hyun-Ju Jung and Hyoung-Moon Kim (Corresponding author) 13</p>
+<p><a href="../../articles/RJ-2022-042">WLinfer: Statistical Inference for Weighted Lindley Distribution</a><br>Yu-Hyeong Jang, SungBum Kim, Hyun-Ju Jung and Hyoung-Moon Kim (Corresponding author)</p>
 <p><a href="../../articles/RJ-2022-043">ICAOD: An R Package for Finding Optimal designs for Nonlinear Statistical Models by Imperialist Competitive Algorithm</a><br>Ehsan Masoudi, Heinz Holling, Weng Kee Wong and Seongho Kim 20</p>
 <p><a href="../../articles/RJ-2022-057">Analysis of the Results of Metadynamics Simulations by metadynminer and metadynminer3d</a><br>Dalibor Trapl and Vojtech Spiwok 46</p>
 <p><a href="../../articles/RJ-2022-052">casebase: An Alternative Framework for Survival Analysis and Comparison of Event Rates</a><br>Sahir Rai Bhatnagar<em>, Maxime Turgeon</em>, Jesse Islam, James A. Hanley and Olli Saarela 59</p>
