deploy: 623f3a010591785cd6502dbddbb76658e13b2d2a

--- a/index.html
+++ b/index.html
@@ -2286,7 +2286,7 @@ p > span.doi, td > span.doi {
 <h3 id="executive-editors">Executive editors</h3>
 <ul>
 <li>Rob Hyndman, Monash University, Australia</li>
-<li>Mark van der Loo, Statistics Netherlands, The Netherlands</li>
+<li>Mark van der Loo, Statistics Netherlands and University of Leiden, The Netherlands</li>
 <li>Catherine Hurley, Maynooth University, Ireland</li>
 </ul>
 <h3 id="associate-editors">Associate editors</h3>
