deploy: cb65f0c20135fc1038b5598b9a24d1071a09d4ad

--- a/index.html
+++ b/index.html
@@ -2281,19 +2281,18 @@ p > span.doi, td > span.doi {
 <p>The R Journal was established in 2009, superseding the <a href="http://www.r-project.org/doc/Rnews/index.html">R News</a>. For historical purposes it also a news section, that includes items from R Core, updates from CRAN and Bioconductor, foRwards activiies and conference reports.</p>
 <h2 id="editorial-board">Editorial board</h2>
 <h3 id="editor-in-chief">Editor-in-Chief</h3>
-<p>Catherine Hurley, Maynooth University, Ireland
+<p>Simon Urbanek, The University of Auckland, New Zealand
 <a href="mailto:r-journal@r-project.org" class="email">r-journal@r-project.org</a></p>
 <h3 id="executive-editors">Executive editors</h3>
 <ul>
-<li>Simon Urbanek, The University of Auckland, New Zealand</li>
-<li>Di Cook, Monash University, Australia</li>
-<li>Mark van der Loo, Statistics Netherlands, The Netherlands</li>
+<li>Rob Hyndman, Monash University, Australia</li>
+<li>Mark van der Loo, Statistics Netherlands and University of Leiden, The Netherlands</li>
+<li>Catherine Hurley, Maynooth University, Ireland</li>
 </ul>
 <h3 id="associate-editors">Associate editors</h3>
 <ul>
 <li>Rafael de Andrade Moral, Maynooth University, Ireland</li>
 <li>Louis Aslett, Durham University, UK</li>
-<li>Elizabeth Atkinson, Mayo Clinic, USA</li>
 <li>Rasmus Bååth, Lund University, Sweden</li>
 <li>Przemek Biecek, University of Warsaw, Poland</li>
 <li>Simone Blomberg, University of Queensland, Australia</li>
@@ -2303,7 +2302,6 @@ p > span.doi, td > span.doi {
 <li>Xiaoyue Cheng, University of Nebraska, Omaha, USA</li>
 <li>Katarina Domijan, Maynooth University, Ireland</li>
 <li>Isabella Gollini, University College Dublin, Ireland</li>
-<li>Kieran Healy, Duke University, USA</li>
 <li>Michael Kane, Yale University, USA</li>
 <li>Adam Loy, Carleton College, USA</li>
 <li>Elizabeth Sweeney, University of Pennsylvania, USA</li>
@@ -2311,7 +2309,6 @@ p > span.doi, td > span.doi {
 <li>Emi Tanaka, Monash University, Australia</li>
 <li>Nicholas Tierney, Telethon Kids, Australia</li>
 <li>Susan Vanderplas, University of Nebraska, Lincoln, USA</li>
-<li>Earo Wang, The University of Auckland, New Zealand</li>
 <li>Emily Zabor, The Cleveland Clinic and Tassig Cancer Institute, USA</li>
 </ul>
 <h3 id="editorial-advisory-board">Editorial advisory board</h3>
