--- a/_issues/2022-4/2022-4.html
+++ b/_issues/2022-4/2022-4.html
@@ -117,7 +117,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["2022-4.log","2022-4.pdf","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
+  {"type":"character","attributes":{},"value":["2022-4_files/anchor-4.2.2/anchor.min.js","2022-4_files/bowser-1.9.3/bowser.min.js","2022-4_files/distill-2.2.21/template.v2.js","2022-4_files/header-attrs-2.20/header-attrs.js","2022-4_files/jquery-3.6.0/jquery-3.6.0.js","2022-4_files/jquery-3.6.0/jquery-3.6.0.min.js","2022-4_files/jquery-3.6.0/jquery-3.6.0.min.map","2022-4_files/popper-2.6.0/popper.min.js","2022-4_files/tippy-6.2.7/tippy-bundle.umd.min.js","2022-4_files/tippy-6.2.7/tippy-light-border.css","2022-4_files/tippy-6.2.7/tippy.css","2022-4_files/tippy-6.2.7/tippy.umd.min.js","2022-4_files/webcomponents-2.0.0/webcomponents.js","2022-4.log","2022-4.pdf","doi.xml","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1552,7 +1552,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <p><a href="../../articles/RJ-2023-020">The openVA Toolkit for Verbal Autopsies</a><br>Zehang Richard Li, Jason Thomas, Eungang Choi, Tyler H. McCormick and Samuel J Clark 316</p>
 <p><a href="../../articles/RJ-2023-016">BayesPPD: An R Package for Bayesian Sample Size Determination Using the Power and Normalized Power Prior for Generalized Linear Models</a><br>Yueqi Shen, Matthew A. Psioda and Joseph G. Ibrahim 335</p>
 <h3 id="news-and-notes">News and Notes</h3>
-<p><a href="../../news/RJ-2022-4-bioconductor">News from the Bioconductor Project</a><br>Bioconductor Core Team 352</p>
+<p><a href="../../news/RJ-2022-4-bioconductor">Bioconductor Notes</a><br>Maria Doyle and Bioconductor Core Developer Team</p>
 <p><a href="../../news/RJ-2022-4-cran">Changes on CRAN</a><br>Kurt Hornik, Uwe Ligges and Achim Zeileis 355</p>
 <p><a href="../../news/RJ-2022-4-forwards">News from the Forwards Taskforce</a><br>Heather Turner 357</p>
 <p><a href="../../news/RJ-2022-4-rcore">Changes in R</a><br>Tomas Kalibera, Sebastian Meyer and Kurt Hornik 360</p>
