--- a/_issues/2022-4/2022-4.html
+++ b/_issues/2022-4/2022-4.html
@@ -117,7 +117,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["2022-4_files/anchor-4.2.2/anchor.min.js","2022-4_files/bowser-1.9.3/bowser.min.js","2022-4_files/distill-2.2.21/template.v2.js","2022-4_files/header-attrs-2.20/header-attrs.js","2022-4_files/jquery-3.6.0/jquery-3.6.0.js","2022-4_files/jquery-3.6.0/jquery-3.6.0.min.js","2022-4_files/jquery-3.6.0/jquery-3.6.0.min.map","2022-4_files/popper-2.6.0/popper.min.js","2022-4_files/tippy-6.2.7/tippy-bundle.umd.min.js","2022-4_files/tippy-6.2.7/tippy-light-border.css","2022-4_files/tippy-6.2.7/tippy.css","2022-4_files/tippy-6.2.7/tippy.umd.min.js","2022-4_files/webcomponents-2.0.0/webcomponents.js","2022-4.log","2022-4.pdf","doi.xml","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
+  {"type":"character","attributes":{},"value":["2022-4.log","2022-4.pdf","doi.xml","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1535,7 +1535,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <p><a href="../../articles/RJ-2023-011">netgwas: An R Package for Network-Based Genome Wide Association Studies</a><br>Pariya Behrouzi, Danny Arends and Ernst C. Wit 18</p>
 <p><a href="../../articles/RJ-2023-012">robslopes: Efficient Computation of the (Repeated) Median Slope</a><br>Jakob Raymaekers and KU Leuven 38</p>
 <p><a href="../../articles/RJ-2023-013">Generalized Mosaic Plots in the Framework</a><br>Haley Jeppson and Heike Hofmann 50</p>
-<p><a href="../../articles/RJ-2023-014">A Study in Reproducibility: The Congruent Matching Cells Algorithm and cmcR Package</a><br>Joseph Zemmels, Susan VanderPlas and Heike Hofmann 79</p>
+<p><a href="../../articles/RJ-2023-014">A Study in Reproducibility: The Congruent Matching Cells Algorithm and cmcR Package</a><br>Joseph Zemmels, Susan VanderPlas and Heike Hofmann</p>
 <p><a href="../../articles/RJ-2023-015">Bootstrapping Clustered Data in R using </a><br>Adam Loy and Jenna Korobova 103</p>
 <p><a href="../../articles/RJ-2023-002">DGLMExtPois: Advances in Dealing with Over and Under-dispersion in a Double GLM Framework</a><br>Antonio J. Sáez-Castillo, Antonio Conde-Sánchez and Francisco Martínez 121</p>
 <p><a href="../../articles/RJ-2023-003">Making Provenance Work for You</a><br>Barbara Lerner, Emery Boose, Orenna Brand, Aaron M. Ellison, Elizabeth Fong, Matthew Lau, Khanh Ngo, Thomas Pasquier, Luis A. Perez, Margo Seltzer, Rose Sheehan and Joseph Wonsil 141</p>
@@ -1552,11 +1552,11 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <p><a href="../../articles/RJ-2023-020">The openVA Toolkit for Verbal Autopsies</a><br>Zehang Richard Li, Jason Thomas, Eungang Choi, Tyler H. McCormick and Samuel J Clark 316</p>
 <p><a href="../../articles/RJ-2023-016">BayesPPD: An R Package for Bayesian Sample Size Determination Using the Power and Normalized Power Prior for Generalized Linear Models</a><br>Yueqi Shen, Matthew A. Psioda and Joseph G. Ibrahim 335</p>
 <h3 id="news-and-notes">News and Notes</h3>
-<p><a href="../../news/RJ-2022-4-bioconductor">Bioconductor Notes</a><br>Maria Doyle and Bioconductor Core Developer Team</p>
-<p><a href="../../news/RJ-2022-4-cran">Changes on CRAN</a><br>Kurt Hornik, Uwe Ligges and Achim Zeileis 355</p>
-<p><a href="../../news/RJ-2022-4-forwards">News from the Forwards Taskforce</a><br>Heather Turner 357</p>
-<p><a href="../../news/RJ-2022-4-rcore">Changes in R</a><br>Tomas Kalibera, Sebastian Meyer and Kurt Hornik 360</p>
-<p><a href="../../news/RJ-2022-4-rfoundation">R Foundation News</a><br>Torsten Hothorn 364</p>
+<p><a href="../../news/RJ-2022-4-bioconductor">Bioconductor Notes</a><br>Maria Doyle and Bioconductor Core Developer Team 352</p>
+<p><a href="../../news/RJ-2022-4-cran">Changes on CRAN</a><br>Kurt Hornik, Uwe Ligges and Achim Zeileis 356</p>
+<p><a href="../../news/RJ-2022-4-forwards">News from the Forwards Taskforce</a><br>Heather Turner 358</p>
+<p><a href="../../news/RJ-2022-4-rcore">Changes in R</a><br>Tomas Kalibera, Sebastian Meyer and Kurt Hornik 361</p>
+<p><a href="../../news/RJ-2022-4-rfoundation">R Foundation News</a><br>Torsten Hothorn 365</p>
 <!--radix_placeholder_article_footer-->
 <!--/radix_placeholder_article_footer-->
 </div>
