--- a/_issues/2022-4/2022-4.html
+++ b/_issues/2022-4/2022-4.html
@@ -1536,7 +1536,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <p><a href="../../articles/RJ-2023-012">robslopes: Efficient Computation of the (Repeated) Median Slope</a><br>Jakob Raymaekers and KU Leuven 38</p>
 <p><a href="../../articles/RJ-2023-013">Generalized Mosaic Plots in the Framework</a><br>Haley Jeppson and Heike Hofmann 50</p>
 <p><a href="../../articles/RJ-2023-014">A Study in Reproducibility: The Congruent Matching Cells Algorithm and cmcR Package</a><br>Joseph Zemmels, Susan VanderPlas and Heike Hofmann 79</p>
-<p><a href="../../articles/RJ-2023-015">Bootstrapping Clustered Data in R using lmeresampler</a><br>Adam Loy and Jenna Korobova</p>
+<p><a href="../../articles/RJ-2023-015">Bootstrapping Clustered Data in R using lmeresampler</a><br>Adam Loy and Jenna Korobova 103</p>
 <p><a href="../../articles/RJ-2023-002">DGLMExtPois: Advances in Dealing with Over and Under-dispersion in a Double GLM Framework</a><br>Antonio J. Sáez-Castillo, Antonio Conde-Sánchez and Francisco Martínez 121</p>
 <p><a href="../../articles/RJ-2023-003">Making Provenance Work for You</a><br>Barbara Lerner, Emery Boose, Orenna Brand, Aaron M. Ellison, Elizabeth Fong, Matthew Lau, Khanh Ngo, Thomas Pasquier, Luis A. Perez, Margo Seltzer, Rose Sheehan and Joseph Wonsil 141</p>
 <p><a href="../../articles/RJ-2023-004">remap: Regionalized Models with Spatially Smooth Predictions</a><br>Jadon Wagstaff and Brennan Bean 160</p>
