deploy: 09ce3b363b948fa2b65f87996708098acc7a03a1

--- a/index.html
+++ b/index.html
@@ -2306,6 +2306,7 @@ as rejected, in progress or accepted/published as of 2023-02-28. Papers labelled
 <h3 id="associate-editors">Associate editors</h3>
 <ul>
 <li>Rafael de Andrade Moral, Maynooth University, Ireland</li>
+<li>Vincent Arel-Bundock, University of Montreal, Canada</li>
 <li>Louis Aslett, Durham University, UK</li>
 <li>Rasmus Bååth, Lund University, Sweden</li>
 <li>Przemek Biecek, University of Warsaw, Poland</li>
