--- a/issues/2022-4/index.html
+++ b/issues/2022-4/index.html
@@ -122,7 +122,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["2022-4.log","2022-4.pdf","doi.xml","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
+  {"type":"character","attributes":{},"value":["2022-4_files/anchor-4.2.2/anchor.min.js","2022-4_files/bowser-1.9.3/bowser.min.js","2022-4_files/distill-2.2.21/template.v2.js","2022-4_files/header-attrs-2.20/header-attrs.js","2022-4_files/jquery-3.6.0/jquery-3.6.0.js","2022-4_files/jquery-3.6.0/jquery-3.6.0.min.js","2022-4_files/jquery-3.6.0/jquery-3.6.0.min.map","2022-4_files/popper-2.6.0/popper.min.js","2022-4_files/tippy-6.2.7/tippy-bundle.umd.min.js","2022-4_files/tippy-6.2.7/tippy-light-border.css","2022-4_files/tippy-6.2.7/tippy.css","2022-4_files/tippy-6.2.7/tippy.umd.min.js","2022-4_files/webcomponents-2.0.0/webcomponents.js","2022-4.log","2022-4.pdf","doi.xml","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
 <meta name="distill:offset" content="../.."/>
@@ -2229,7 +2229,7 @@ d-appendix d-footnote-list a.footnote-backlink {
 <p><a href="../../articles/RJ-2023-001">knitrdata: A Tool for Creating Standalone Rmarkdown Source Documents</a><br>David M. Kaplan 6</p>
 <p><a href="../../articles/RJ-2023-011">netgwas: An R Package for Network-Based Genome Wide Association Studies</a><br>Pariya Behrouzi, Danny Arends and Ernst C. Wit 18</p>
 <p><a href="../../articles/RJ-2023-012">robslopes: Efficient Computation of the (Repeated) Median Slope</a><br>Jakob Raymaekers and KU Leuven 38</p>
-<p><a href="../../articles/RJ-2023-013">Generalized Mosaic Plots in the Framework</a><br>Haley Jeppson and Heike Hofmann 50</p>
+<p><a href="../../articles/RJ-2023-013">Generalized Mosaic Plots in the ggplot2 Framework</a><br>Haley Jeppson and Heike Hofmann</p>
 <p><a href="../../articles/RJ-2023-014">A Study in Reproducibility: The Congruent Matching Cells Algorithm and cmcR Package</a><br>Joseph Zemmels, Susan VanderPlas and Heike Hofmann 79</p>
 <p><a href="../../articles/RJ-2023-015">Bootstrapping Clustered Data in R using lmeresampler</a><br>Adam Loy and Jenna Korobova 103</p>
 <p><a href="../../articles/RJ-2023-002">DGLMExtPois: Advances in Dealing with Over and Under-dispersion in a Double GLM Framework</a><br>Antonio J. Sáez-Castillo, Antonio Conde-Sánchez and Francisco Martínez 121</p>
