deploy: f4b94bc18cba94e642dcf8451f24a36f7d1e13c8

--- a/articles.html
+++ b/articles.html
@@ -2578,7 +2578,7 @@ The OTrecod package also provides a set of support functions dedicated to the ha
 <div class="publishedDate">Feb. 10, 2023</div>
 <div class="dt-authors">
 <div class="dt-author">Jakob Raymaekers</div>
-<div class="dt-author">KU Leuven</div>
+<div class="dt-author"></div>
 </div>
 </div>
 <div class="thumbnail">
