deploy: 4f42e6856ce83b595184eb3166962392c8fb3a2a

--- a/issues/2022-4/index.html
+++ b/issues/2022-4/index.html
@@ -2228,7 +2228,7 @@ d-appendix d-footnote-list a.footnote-backlink {
 <h3 id="contributed-research-articles">Contributed Research Articles</h3>
 <p><a href="../../articles/RJ-2023-001">knitrdata: A Tool for Creating Standalone Rmarkdown Source Documents</a><br>David M. Kaplan 6</p>
 <p><a href="../../articles/RJ-2023-011">netgwas: An R Package for Network-Based Genome Wide Association Studies</a><br>Pariya Behrouzi, Danny Arends and Ernst C. Wit 18</p>
-<p><a href="../../articles/RJ-2023-012">robslopes: Efficient Computation of the (Repeated) Median Slope</a><br>Jakob Raymaekers and 38</p>
+<p><a href="../../articles/RJ-2023-012">robslopes: Efficient Computation of the (Repeated) Median Slope</a><br>Jakob Raymaekers 38</p>
 <p><a href="../../articles/RJ-2023-013">Generalized Mosaic Plots in the ggplot2 Framework</a><br>Haley Jeppson and Heike Hofmann 50</p>
 <p><a href="../../articles/RJ-2023-014">A Study in Reproducibility: The Congruent Matching Cells Algorithm and cmcR Package</a><br>Joseph Zemmels, Susan VanderPlas and Heike Hofmann 79</p>
 <p><a href="../../articles/RJ-2023-015">Bootstrapping Clustered Data in R using lmeresampler</a><br>Adam Loy and Jenna Korobova 103</p>
