--- a/issues/2023-1/index.html
+++ b/issues/2023-1/index.html
@@ -122,7 +122,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["2023-1_files/anchor-4.2.2/anchor.min.js","2023-1_files/bowser-1.9.3/bowser.min.js","2023-1_files/distill-2.2.21/template.v2.js","2023-1_files/header-attrs-2.24/header-attrs.js","2023-1_files/jquery-3.6.0/jquery-3.6.0.js","2023-1_files/jquery-3.6.0/jquery-3.6.0.min.js","2023-1_files/jquery-3.6.0/jquery-3.6.0.min.map","2023-1_files/popper-2.6.0/popper.min.js","2023-1_files/tippy-6.2.7/tippy-bundle.umd.min.js","2023-1_files/tippy-6.2.7/tippy-light-border.css","2023-1_files/tippy-6.2.7/tippy.css","2023-1_files/tippy-6.2.7/tippy.umd.min.js","2023-1_files/webcomponents-2.0.0/webcomponents.js","2023-1-head.pdf","2023-1.log","doi.xml","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
+  {"type":"character","attributes":{},"value":["2023-1.log","2023-1.pdf","doi.xml","RJournal.sty","RJwrapper.tex","RJwrapper.tex~","Rlogo-5.png"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
 <meta name="distill:offset" content="../.."/>
@@ -2238,7 +2238,7 @@ d-appendix d-footnote-list a.footnote-backlink {
 <p><a href="../../articles/RJ-2023-030">The segmetric Package: Metrics for Assessing Segmentation Accuracy for Geospatial Data</a><br>Rolf Simoes, Alber Sanchez, Michelle C. A. Picoli and Patrick Meyfroidt 159</p>
 <p><a href="../../articles/RJ-2023-031">Onlineforecast: An R Package for Adaptive and Recursive Forecasting</a><br>Peder Bacher, Hjörleifur G. Bergsteinsson, Linde Frölke, Mikkel L. Sørensen, Julian Lemos-Vinasco, Jon Liisberg, Jan Kloppenborg Møller, Henrik Aalborg Nielsen and Henrik Madsen 173</p>
 <p><a href="../../articles/RJ-2023-032">markovMSM: An R Package for Checking the Markov Condition in Multi-State Survival Data</a><br>Gustavo Soutinho and Luís Meira-Machado 195</p>
-<p><a href="../../articles/RJ-2023-033">Robust functional linear regression models</a><br>Ufuk Beyaztas and Han Lin Shang 212</p>
+<p><a href="../../articles/RJ-2023-033">Robust Functional Linear Regression Models</a><br>Ufuk Beyaztas and Han Lin Shang 212</p>
 <p><a href="../../articles/RJ-2023-034">Fairness Audits and Debiasing Using </a><br>Florian Pfisterer, Siyi Wei, Sebastian Vollmer, Michel Lang and Bernd Bischl 234</p>
 <p><a href="../../articles/RJ-2023-035">ClusROC: An R Package for ROC Analysis in Three-Class Classification Problems for Clustered Data</a><br>Duc-Khanh To, Gianfranco Adimari and Monica Chiogna 254</p>
 <p><a href="../../articles/RJ-2023-036">Resampling Fuzzy Numbers with Statistical Applications: FuzzyResampling Package</a><br>Maciej Romaniuk and Przemysław Grzegorzewski 271</p>
