deploy: bb0f9945e254a032a856b9c61d41ff35af587146

--- a/index.html
+++ b/index.html
@@ -2253,7 +2253,7 @@ p > span.doi, td > span.doi {
 </style>
 </div>
 <p>The R Journal is the peer-reviewed, open-access scientific journal, published by The R Foundation. It features short to medium length articles (up to 20 pages) covering topics of interest to users and developers of R. For example, description and implementation details of R packages, surveys or reviews of R software related to a particular area, applications of R software or descriptions of teaching resources related to R.</p>
-<p>The R Journal reaches a wide audience and has a thorough review process. It has a generally increasing <a href="https://www.scimagojr.com/journalsearch.php?q=21100255423&amp;tip=sid&amp;exact=no">SJR impact factor</a>. Papers are expected to be concise, clearly written, not too technical, clearly related R, and follow reproducible practices. Additional technical details and examples could be included as supplementary material. Authors of refereed articles should take care to:</p>
+<p>The R Journal reaches a wide audience and has a thorough review process. It has a generally increasing <a href="https://www.scimagojr.com/journalsearch.php?q=21100255423&amp;tip=sid&amp;exact=no">SJR impact factor</a>. Papers are expected to be concise, clearly written, not too technical, clearly related to R, and follow reproducible practices. Additional technical details and examples could be included as supplementary material. Authors of refereed articles should take care to:</p>
 <ul>
 <li>put their contribution in context, in particular discuss related R functions or packages;</li>
 <li>explain the motivation for their contribution;</li>
@@ -2278,10 +2278,10 @@ p > span.doi, td > span.doi {
 <li><p>Special issue articles: papers associated with a conference like R Medicine, or possibly a collection of papers on a particular topic of interest.</p></li>
 </ul>
 <h2 id="history">History</h2>
-<p>The R Journal was established in 2009, superseding the <a href="http://www.r-project.org/doc/Rnews/index.html">R News</a>. For historical purposes it also a news section, that includes items from R Core, updates from CRAN and Bioconductor, foRwards activiies and conference reports.</p>
+<p>The R Journal was established in 2009, superseding the <a href="http://www.r-project.org/doc/Rnews/index.html">R News</a>. For historical purposes it also a news section, that includes items from R Core, updates from CRAN and Bioconductor, foRwards activities and conference reports.</p>
 <h2 id="r-journal-article-summaries-for-the-last-four-years">R Journal article summaries, for the last four years</h2>
 <p>The R Journal receives a large number of submissions, currently over 200 a year, and processing times and especially review times are highly variable. The summaries below shows that for published articles, the time from first submission to accept averages at under a year.
-Just a very small number of 2021 submissions await a final decision, and even for 2022 submission, the majority of articles have received an accept/reject decision.</p>
+Just a very small number of 2021 submissions await a final decision, and even for 2022 submissions, the majority of articles have received an accept/reject decision.</p>
 <div class="layout-chunk" data-layout="l-body">
 
 </div>
@@ -2292,7 +2292,7 @@ Just a very small number of 2021 submissions await a final decision, and even fo
 <p><img src="resources/time_to_accept_plot.png" width="44%" /><img src="resources/article_status_plot.png" width="56%" /></p>
 </div>
 <p>For published articles in the years 2019, 2020, 2021, 2022, the boxplots show time from submission to accept by year of publication. Median number of days to accept is under a year. The barchart on the right refers to articles submitted in the years 2019, 2020, 2021, 2022, and reports the status as
-as rejected, in progress or accepted/published as of 2023-09-23. Papers labelled ‘in progress’ are under review or awaiting revisions.</p>
+rejected, in progress or accepted/published. Papers labelled ‘in progress’ are under review or awaiting revisions.</p>
 <h2 id="editorial-board">Editorial board</h2>
 <h3 id="editor-in-chief">Editor-in-Chief</h3>
 <p>Simon Urbanek, The University of Auckland, New Zealand
@@ -2310,7 +2310,6 @@ as rejected, in progress or accepted/published as of 2023-09-23. Papers labelled
 <li>Louis Aslett, Durham University, UK</li>
 <li>Rasmus Bååth, Lund University, Sweden</li>
 <li>Przemek Biecek, University of Warsaw, Poland</li>
-<li>Simone Blomberg, University of Queensland, Australia</li>
 <li>Chris Brunsdon, Maynooth University, Ireland</li>
 <li>Kevin Burke, University of Limerick, Ireland</li>
 <li>Mine Çetinkaya-Rundel, Duke University, USA</li>
