deploy: 7afa8284b8c1bbdcc105b7345f9366bbbe6b257e

--- a/issues/2023-2/index.html
+++ b/issues/2023-2/index.html
@@ -87,6 +87,174 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </style>
 
 
+  <script>
+    $(function() {
+      console.log("Starting...")
+
+      // Always show Published - distill hides it if not set
+      function show_byline_column(caption) {
+        $('d-byline').find('h3:contains("' + caption + '")').parent().css('visibility', 'visible');
+      }
+
+      show_byline_column('Published')
+
+      // tweak function
+      var rmd_meta = JSON.parse($("#radix-rmarkdown-metadata").html());
+      function get_meta(name, meta) {
+        var ind = meta.attributes.names.value.findIndex((e) => e == name)
+        var val = meta.value[ind]
+        if (val.type != 'list') {
+          return val.value.toString()
+        }
+        return val
+      }
+
+      // tweak description
+      // Add clickable tags
+      const slug = get_meta('slug', rmd_meta)
+      const cite_url = get_meta('citation_url', rmd_meta)
+
+      var title = $("d-title").text
+
+      const buttons = $('<div class="dt-tags" style="grid-column: page;">')
+      buttons.append('<a href="#citation" class="dt-tag"><i class="fas fa-quote-left"></i> Cite</a>')
+      buttons.append('<a href="' + slug + '.pdf" class="dt-tag"><i class="fas fa-file-pdf"></i> PDF</a>')
+      buttons.append('<a href="' + slug + '.zip" class="dt-tag"><i class="fas fa-file-zipper"></i> Supplement</a>')
+
+
+      const abstract = $('<d-abstract>')
+      abstract.append('<b>Abstract:</b><br>')
+      abstract.append($("d-title p:not(:empty)").first()) // Move description to d-abstract
+      $("d-title p:empty").remove() // Remove empty paragraphs after title
+      abstract.append(buttons)
+      abstract.insertAfter($('d-title')) // Add abstract section after title
+
+      // tweak by-line
+      var byline = $("d-byline div.byline")
+      ind = rmd_meta.attributes.names.value.findIndex((e) => e == "journal")
+      const journal = get_meta('journal', rmd_meta)
+      const volume = get_meta('volume', rmd_meta)
+      const issue = get_meta('issue', rmd_meta)
+      const jrtitle = get_meta('title', journal)
+      const year = ((jrtitle == "R News") ? 2000 : 2008) + parseInt(volume)
+      const firstpage = get_meta('firstpage', journal)
+      const lastpage = get_meta('lastpage', journal)
+      byline.append('<div class="rjournal grid">')
+      $('div.rjournal').append('<h3>Volume</h3>')
+      $('div.rjournal').append('<h3>Pages</h3>')
+      $('div.rjournal').append('<a class="volume" href="../../issues/'+year+'-'+issue+'">'+volume+'/'+issue+'</a>')
+      $('div.rjournal').append('<p class="pages">'+firstpage+' - '+lastpage+'</p>')
+
+      const received_date = new Date(get_meta('date_received', rmd_meta))
+      byline.find('h3:contains("Published")').parent().append('<h3>Received</h3><p>'+received_date.toLocaleDateString('en-US', {month: 'short'})+' '+received_date.getDate()+', '+received_date.getFullYear()+'</p>')
+
+    })
+  </script>
+
+  <style>
+      /*
+    .nav-dropdown-content .nav-dropdown-header {
+      text-transform: lowercase;
+    }
+    */
+
+    d-byline .byline {
+      grid-template-columns: 2fr 2fr 2fr 2fr;
+    }
+
+    d-byline .rjournal {
+      grid-column-end: span 2;
+      grid-template-columns: 1fr 1fr;
+      margin-bottom: 0;
+    }
+
+    d-title h1, d-title p, d-title figure,
+    d-abstract p, d-abstract b {
+      grid-column: page;
+    }
+
+    d-title .dt-tags {
+      grid-column: page;
+    }
+
+    .dt-tags .dt-tag {
+      text-transform: lowercase;
+    }
+
+    d-article h1 {
+      line-height: 1.1em;
+    }
+
+    d-abstract p, d-article p {
+      text-align: justify;
+    }
+
+    @media(min-width: 1000px) {
+      .d-contents.d-contents-float {
+        justify-self: end;
+      }
+
+      nav.toc {
+        border-right: 1px solid rgba(0, 0, 0, 0.1);
+        border-right-width: 1px;
+        border-right-style: solid;
+        border-right-color: rgba(0, 0, 0, 0.1);
+      }
+    }
+
+    .posts-list .dt-tags .dt-tag {
+      text-transform: lowercase;
+    }
+
+    @keyframes highlight-target {
+      0% {
+        background-color: #ffa;
+      }
+      66% {
+        background-color: #ffa;
+      }
+      100% {
+        background-color: none;
+      }
+    }
+
+    d-article :target, d-appendix :target {
+       animation: highlight-target 3s;
+    }
+
+    .header-section-number {
+      margin-right: 0.5em;
+    }
+    
+    d-appendix .citation-appendix,
+    .d-appendix .citation-appendix {
+      color: rgb(60, 60, 60);
+    }
+
+    d-article h2 {
+      border-bottom: 0px solid rgba(0, 0, 0, 0.1);
+      padding-bottom: 0rem;
+    }
+    d-article h3 {
+      font-size: 20px;
+    }
+    d-article h4 {
+      font-size: 18px;
+      text-transform: none;
+    }
+
+    @media (min-width: 1024px) {
+      d-article h2 {
+        font-size: 32px;
+      }
+      d-article h3 {
+        font-size: 24px;
+      }
+      d-article h4 {
+        font-size: 20px;
+      }
+    }
+  </style>
   <!--radix_placeholder_meta_tags-->
 <title>The R Journal: Volume 15/2</title>
 
@@ -122,7 +290,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["2023-2.log","2023-2.pdf","2023-2.Rmd~","doi.xml","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
+  {"type":"character","attributes":{},"value":["2023-2_files/anchor-4.2.2/anchor.min.js","2023-2_files/bowser-1.9.3/bowser.min.js","2023-2_files/distill-2.2.21/template.v2.js","2023-2_files/header-attrs-2.25/header-attrs.js","2023-2_files/jquery-3.6.0/jquery-3.6.0.js","2023-2_files/jquery-3.6.0/jquery-3.6.0.min.js","2023-2_files/jquery-3.6.0/jquery-3.6.0.min.map","2023-2_files/popper-2.6.0/popper.min.js","2023-2_files/tippy-6.2.7/tippy-bundle.umd.min.js","2023-2_files/tippy-6.2.7/tippy-light-border.css","2023-2_files/tippy-6.2.7/tippy.css","2023-2_files/tippy-6.2.7/tippy.umd.min.js","2023-2_files/webcomponents-2.0.0/webcomponents.js","2023-2.log","2023-2.pdf","doi.xml","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
 <meta name="distill:offset" content="../.."/>
@@ -2252,24 +2420,24 @@ d-appendix d-footnote-list a.footnote-backlink {
 <h2 id="table-of-contents">Table of contents</h2>
 <p><a href="../../news/RJ-2023-2-editorial">Editorial</a><br>Simon Urbanek 3</p>
 <h3 id="contributed-research-articles">Contributed Research Articles</h3>
-<p><a href="../../articles/RJ-2023-040">nlstac: Non-Gradient Separable Nonlinear Least Squares Fitting</a><br>J. A. F. Torvisco, R. Benítez, M. R. Arias and J. Cabello Sánchez 4</p>
-<p><a href="../../articles/RJ-2023-041">hydrotoolbox, a Package for Hydrometeorological Data Management</a><br>Ezequiel Toum and Pierre Pitte 24</p>
-<p><a href="../../articles/RJ-2023-042">bqror: An R package for Bayesian Quantile Regression in Ordinal Models</a><br>Prajual Maheshwari and Mohammad Arshad Rahman 38</p>
-<p><a href="../../articles/RJ-2023-043">Gaussian Mixture Models in R</a><br>Bastien Chassagnol, Antoine Bichat, Cheïma Boudjeniba, Pierre-Henri Wuillemin, Mickaël Guedj, David Gohel, Gregory Nuel and Etienne Becht 55</p>
-<p><a href="../../articles/RJ-2023-047">mutualinf: An R Package for Computing and Decomposing the Mutual Information Index of Segregation</a><br>Rafael Fuentealba-Chaura, Daniel Guinea-Martin, Ricardo Mora and Julio Rojas-Mora 76</p>
-<p><a href="../../articles/RJ-2023-055">A Workflow for Estimating and Visualising Excess Mortality During the COVID-19 Pandemic</a><br>Garyfallos Konstantinoudis, Virgilio Gómez-Rubio, Michela Cameletti, Monica Pirani, Gianluca Baio and Marta Blangiardo 88</p>
-<p><a href="../../articles/RJ-2023-056">Generalized Estimating Equations using the new R package glmtoolbox</a><br>L.H. Vanegas, L.M. Rondón and G.A. Paula 104</p>
-<p><a href="../../articles/RJ-2023-057">clustAnalytics: An R Package for Assessing Stability and Significance of Communities in Networks</a><br>Martí Renedo-Mirambell and Argimiro Arratia 133</p>
-<p><a href="../../articles/RJ-2023-044">PINstimation: An R Package for Estimating Probability of Informed Trading Models</a><br>Montasser Ghachem and Oguz Ersan 144</p>
-<p><a href="../../articles/RJ-2023-045">EviewsR: An R Package for Dynamic and Reproducible Research Using EViews, R, R Markdown and Quarto</a><br>Sagiru Mati, Irfan Civcir and S. I. Abba 168</p>
-<p><a href="../../articles/RJ-2023-046">: Smooth Interactive Touring of High Dimensions, Demonstrated with scRNA-Seq Data</a><br>Paul Harrison 205</p>
-<p><a href="../../articles/RJ-2023-048">ggdensity: Improved Bivariate Density Visualization in R</a><br>James Otto and David Kahle 219</p>
-<p><a href="../../articles/RJ-2023-049">Three-Way Correspondence Analysis in R</a><br>Rosaria Lombardo, Michel van de Velden and Eric J. Beh 236</p>
-<p><a href="../../articles/RJ-2023-050">Estimating Heteroskedastic and Instrumental Variable Models for Binary Outcome Variables in R</a><br>Mauricio Sarrias 262</p>
-<p><a href="../../articles/RJ-2023-051">genpathmox: An R Package to Tackle Numerous Categorical Variables and Heterogeneity in Partial Least Squares Structural Equation Modeling</a><br>Giuseppe Lamberti, 293</p>
-<p><a href="../../articles/RJ-2023-052">Taking the Scenic Route: Interactive and Performant Tour Animations</a><br>Casper Hart and Earo Wang 306</p>
-<p><a href="../../articles/RJ-2023-053">Identifying Counterfactual Queries with the R Package cfid</a><br>Santtu Tikka 329</p>
-<p><a href="../../articles/RJ-2023-054">vivid: An R package for Variable Importance and Variable Interactions Displays for Machine Learning Models</a><br>Alan Inglis, Andrew Parnell and Catherine Hurley 343</p>
+<p><a href="../../articles/RJ-2023-040">nlstac: Non-Gradient Separable Nonlinear Least Squares Fitting</a><br>J. A. F. Torvisco, R. Benítez, M. R. Arias and J. Cabello Sánchez 5</p>
+<p><a href="../../articles/RJ-2023-041">hydrotoolbox, a Package for Hydrometeorological Data Management</a><br>Ezequiel Toum and Pierre Pitte 25</p>
+<p><a href="../../articles/RJ-2023-042">bqror: An R package for Bayesian Quantile Regression in Ordinal Models</a><br>Prajual Maheshwari and Mohammad Arshad Rahman 39</p>
+<p><a href="../../articles/RJ-2023-043">Gaussian Mixture Models in R</a><br>Bastien Chassagnol, Antoine Bichat, Cheïma Boudjeniba, Pierre-Henri Wuillemin, Mickaël Guedj, David Gohel, Gregory Nuel and Etienne Becht 56</p>
+<p><a href="../../articles/RJ-2023-047">mutualinf: An R Package for Computing and Decomposing the Mutual Information Index of Segregation</a><br>Rafael Fuentealba-Chaura, Daniel Guinea-Martin, Ricardo Mora and Julio Rojas-Mora 77</p>
+<p><a href="../../articles/RJ-2023-055">A Workflow for Estimating and Visualising Excess Mortality During the COVID-19 Pandemic</a><br>Garyfallos Konstantinoudis, Virgilio Gómez-Rubio, Michela Cameletti, Monica Pirani, Gianluca Baio and Marta Blangiardo 89</p>
+<p><a href="../../articles/RJ-2023-056">Generalized Estimating Equations using the new R package glmtoolbox</a><br>L.H. Vanegas, L.M. Rondón and G.A. Paula 105</p>
+<p><a href="../../articles/RJ-2023-057">clustAnalytics: An R Package for Assessing Stability and Significance of Communities in Networks</a><br>Martí Renedo-Mirambell and Argimiro Arratia 134</p>
+<p><a href="../../articles/RJ-2023-044">PINstimation: An R Package for Estimating Probability of Informed Trading Models</a><br>Montasser Ghachem and Oguz Ersan 145</p>
+<p><a href="../../articles/RJ-2023-045">EviewsR: An R Package for Dynamic and Reproducible Research Using EViews, R, R Markdown and Quarto</a><br>Sagiru Mati, Irfan Civcir and S. I. Abba 169</p>
+<p><a href="../../articles/RJ-2023-046">langevitour: Smooth Interactive Touring of High Dimensions, Demonstrated with scRNA-Seq Data</a><br>Paul Harrison 206</p>
+<p><a href="../../articles/RJ-2023-048">ggdensity: Improved Bivariate Density Visualization in R</a><br>James Otto and David Kahle 220</p>
+<p><a href="../../articles/RJ-2023-049">Three-Way Correspondence Analysis in R</a><br>Rosaria Lombardo, Michel van de Velden and Eric J. Beh 237</p>
+<p><a href="../../articles/RJ-2023-050">Estimating Heteroskedastic and Instrumental Variable Models for Binary Outcome Variables in R</a><br>Mauricio Sarrias 263</p>
+<p><a href="../../articles/RJ-2023-051">genpathmox: An R Package to Tackle Numerous Categorical Variables and Heterogeneity in Partial Least Squares Structural Equation Modeling</a><br>Giuseppe Lamberti, 294</p>
+<p><a href="../../articles/RJ-2023-052">Taking the Scenic Route: Interactive and Performant Tour Animations</a><br>Casper Hart and Earo Wang 307</p>
+<p><a href="../../articles/RJ-2023-053">Identifying Counterfactual Queries with the R Package cfid</a><br>Santtu Tikka 330</p>
+<p><a href="../../articles/RJ-2023-054">vivid: An R package for Variable Importance and Variable Interactions Displays for Machine Learning Models</a><br>Alan Inglis, Andrew Parnell and Catherine Hurley 344</p>
 <!--radix_placeholder_article_footer-->
 <!--/radix_placeholder_article_footer-->
 </div>
