--- a/issues/2023-3/index.html
+++ b/issues/2023-3/index.html
@@ -121,13 +121,17 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
       buttons.append('<a href="' + slug + '.pdf" class="dt-tag"><i class="fas fa-file-pdf"></i> PDF</a>')
       buttons.append('<a href="' + slug + '.zip" class="dt-tag"><i class="fas fa-file-zipper"></i> Supplement</a>')
 
-
-      const abstract = $('<d-abstract>')
-      abstract.append('<b>Abstract:</b><br>')
-      abstract.append($("d-title p:not(:empty)").first()) // Move description to d-abstract
-      $("d-title p:empty").remove() // Remove empty paragraphs after title
-      abstract.append(buttons)
-      abstract.insertAfter($('d-title')) // Add abstract section after title
+      // adds Abstract: in front of the first <p> in the title section --
+      // unless it happens to be the subtitle (FIXME: this is a bad hack - can't distill do this?)
+      var tpar = $("d-title p:not(:empty)").first();
+      if (tpar && ! tpar.hasClass("subtitle")) {
+        const abstract = $('<d-abstract>')
+        abstract.append('<b>Abstract:</b><br>')
+        abstract.append($("d-title p:not(:empty)").first()) // Move description to d-abstract
+        $("d-title p:empty").remove() // Remove empty paragraphs after title
+        abstract.append(buttons)
+        abstract.insertAfter($('d-title')) // Add abstract section after title */
+      }
 
       // tweak by-line
       var byline = $("d-byline div.byline")
@@ -290,7 +294,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["2023-3.log","2023-3.pdf","2023-3.Rmd~","doi.xml","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
+  {"type":"character","attributes":{},"value":["2023-3.log","2023-3.pdf","doi.xml","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
 <meta name="distill:offset" content="../.."/>
@@ -2434,7 +2438,7 @@ d-appendix d-footnote-list a.footnote-backlink {
 <p><a href="../../articles/RJ-2023-070/">fnets: An R Package for Network Estimation and Forecasting via Factor-Adjusted VAR Modelling</a><br>Dom Owens, Haeran Cho and Matteo Barigozzi 214</p>
 <p><a href="../../articles/RJ-2023-071/">Coloring in R’s Blind Spot</a><br>Achim Zeileis and Paul Murrell 240</p>
 <p><a href="../../articles/RJ-2023-072/">Updates to the R Graphics Engine: One Person’s Chart Junk is Another’s Chart Treasure</a><br>Paul Murrell 257</p>
-<p><a href="../../articles/RJ-2023-073/"><code>mathml</code>: Translate R Expressions to MathML and LaTeX</a><br>Matthias Gondan and Irene Alfarone 277</p>
+<p><a href="../../articles/RJ-2023-073/">mathml: Translate R Expressions to MathML and LaTeX</a><br>Matthias Gondan and Irene Alfarone 277</p>
 <h3 id="news-and-notes">News and Notes</h3>
 <p><a href="../../news/RJ-2023-3-cran/">Changes on CRAN</a><br>Kurt Hornik, Uwe Ligges and Achim Zeileis 292</p>
 <p><a href="../../news/RJ-2023-3-rf/">R Foundation News</a><br>Torsten Hothorn 294</p>
