deploy: 3daaa206ec1a134a8bbd0cf46f29f7b03a176dd3

--- a/news.html
+++ b/news.html
@@ -2366,7 +2366,7 @@ function init_posts_list() {
 </div>
 </div>
 <div class="thumbnail">
-<img/>
+<img src="news/RJ-2023-3-cran/RJ-2023-3-cran_files/figure-html5/cran_growth-1.png"/>
 </div>
 <div class="description">
 <h2>Changes on CRAN</h2>
@@ -2471,7 +2471,7 @@ function init_posts_list() {
 </div>
 </div>
 <div class="thumbnail">
-<img/>
+<img data-src="news/RJ-2023-1-cran/RJ-2023-1-cran_files/figure-html5/cran_growth-1.png"/>
 </div>
 <div class="description">
 <h2>Changes on CRAN</h2>
