deploy: 25339cdf173091a335fc3f1eff2bba9aa4f60827

--- a/issues/2023-3/index.html
+++ b/issues/2023-3/index.html
@@ -2427,7 +2427,7 @@ d-appendix d-footnote-list a.footnote-backlink {
 <h3 id="contributed-research-articles">Contributed Research Articles</h3>
 <p><a href="../../articles/RJ-2023-060/">Variety and Mainstays of the R Developer Community</a><br>Lijin Zhang, Xueyang Li and Zhiyong Zhang 5</p>
 <p><a href="../../articles/RJ-2023-061/">SSNbayes: An R Package for Bayesian Spatio-Temporal Modelling on Stream Networks</a><br>Edgar Santos-Fernandez, Jay M. Ver Hoef, James McGree, Daniel J. Isaak, Kerrie Mengersen and Erin E. Peterson 26</p>
-<p><a href="../../articles/RJ-2023-062/">C443: An R-package to see a forest for the trees</a><br>Aniek Sies and Iven Van Mechelen 59</p>
+<p><a href="../../articles/RJ-2023-062/">C443: An R package to See a Forest for the Trees</a><br>Aniek Sies, Iven Van Mechelen and Kristof Meers 59</p>
 <p><a href="../../articles/RJ-2023-063/">TwoSampleTest.HD: An R Package for the Two-Sample Problem with High-Dimensional Data</a><br>Marta Cousido-Rocha and Jacobo de Uña-Álvarez 79</p>
 <p><a href="../../articles/RJ-2023-064/">Statistical Models for Repeated Categorical Ratings: The R Package rater</a><br>Jeffrey M. Pullin, Lyle C. Gurrin and Damjan Vukcevic 93</p>
 <p><a href="../../articles/RJ-2023-065/">GREENeR: An R Package to Estimate and Visualize Nutrients Pressures on Surface Waters</a><br>Angel Udías, Bruna Grizzetti, Olga Vigiak, Alberto Aloe, Cesar Alfaro and Javier Gomez 119</p>
