deploy: 9517d742c8247947cac188cb2521191d69d8375d

--- a/index.html
+++ b/index.html
@@ -2321,13 +2321,12 @@ Just a very small number of 2021 submissions await a final decision, and even fo
 rejected, in progress or accepted/published. Papers labelled ‘in progress’ are under review or awaiting revisions.</p>
 <h2 id="editorial-board">Editorial board</h2>
 <h3 id="editor-in-chief">Editor-in-Chief</h3>
-<p>Simon Urbanek, The University of Auckland, New Zealand
+<p>Mark van der Loo, Statistics Netherlands and University of Leiden, The Netherlands
 <a href="mailto:r-journal@r-project.org" class="email">r-journal@r-project.org</a></p>
 <h3 id="executive-editors">Executive editors</h3>
 <ul>
+<li>Simon Urbanek, The University of Auckland, New Zealand</li>
 <li>Rob Hyndman, Monash University, Australia</li>
-<li>Mark van der Loo, Statistics Netherlands and University of Leiden, The Netherlands</li>
-<li>Catherine Hurley, Maynooth University, Ireland</li>
 <li>Emi Tanaka, Australian National University, Australia</li>
 </ul>
 <h3 id="associate-editors">Associate editors</h3>
