deploy: ceb85d0e7149d0d0f67f9bb7b7f3dd67c4050c49

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css" data-origin="pandoc">
 pre > code.sourceCode { white-space: pre; position: relative; }
-pre > code.sourceCode > span { display: inline-block; line-height: 1.25; }
+pre > code.sourceCode > span { line-height: 1.25; }
 pre > code.sourceCode > span:empty { height: 1.2em; }
 .sourceCode { overflow: visible; }
 code.sourceCode > span { color: inherit; text-decoration: inherit; }
@@ -2166,7 +2166,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
     color: var(--hover-color, white);
   }</style>
   <!--/radix_placeholder_distill-->
-  <script src="site_libs/header-attrs-2.25/header-attrs.js"></script>
+  <script src="site_libs/header-attrs-2.26/header-attrs.js"></script>
   <script src="site_libs/popper-2.6.0/popper.min.js"></script>
   <link href="site_libs/tippy-6.2.7/tippy.css" rel="stylesheet" />
   <link href="site_libs/tippy-6.2.7/tippy-light-border.css" rel="stylesheet" />
@@ -2361,7 +2361,13 @@ rejected, in progress or accepted/published. Papers labelled ‘in progress’ a
 </ul>
 <h3 id="governance">Governance</h3>
 <p>The R Journal is run under the auspices of <a href="https://www.r-project.org/foundation/">the R Foundation</a>, and editors of the Journal are appointed by the Foundation board.</p>
-<h3 id="previous-associate-editors">Previous Associate Editors</h3>
+<h3 id="past-editors-in-chief">Past Editors-in-Chief</h3>
+<p>Vince Carey (2009), Peter Dalgaard (2010), Heather Turner (2011), Martyn
+Plummer (2012), Hadley Wickham (2013), Deepayan Sarkar (2014), Bettina Grün
+(2015), Michael Lawrence (2016), Roger Bivand (2017), John Verzani (2018),
+Norman Matloff (2019), Michael Kane (2020), Dianne Cook (2021), Catherine
+Hurley (2022), Simon Urbanek (2023)</p>
+<h3 id="past-associate-editors">Past Associate Editors</h3>
 <ul>
 <li>Earo Wang (2020-2022)</li>
 <li>Beth Atkinson (2020-2022)</li>
