--- a/index.html
+++ b/index.html
@@ -2351,6 +2351,13 @@ rejected, in progress or accepted/published. Papers labelled ‘in progress’ a
 <li>Ursula Laa, BOKU Vienna, Austria</li>
 <li>Matthias Templ, University of Applied Sciences and Arts Northwestern Switzerland, Switzerland</li>
 <li>Romain Lesur, INSEE, France</li>
+<li>Jouni Helske, University of Turku, Finland</li>
+<li>Christoph Sax, Cynkra, Switzerland</li>
+<li>Thomas Fung, Macquarie University, Australia</li>
+<li>Thiyanga Talagala, University of Sri Jayewardenepura, Sri Lanka</li>
+<li>Xiaoqian Wang, Monash University, Australia</li>
+<li>Ivan Svetunkov, Lancaster University, UK</li>
+<li>Wenjie Wang, Eli Lilly and Company, USA</li>
 </ul>
 <h3 id="editorial-advisory-board">Editorial advisory board</h3>
 <ul>
